[tool.poetry]
authors = ["Max Halford <maxhalford25@gmail.com>"]
description = "A minimalist alternative to dbt"
name = "lea-cli"
packages = [
  {include = "lea", from = "."},
]
version = "0.7.3"

[tool.poetry.dependencies]
click = "^8.1.7"
Jinja2 = "^3.1.2"
db-dtypes = "^1.1.1"
duckdb = "^1.0.0"
gitpython = "^3.1.43"
google-cloud-bigquery = "^3.11.4"
pandas = "^2.1.3"
python = ">=3.10,<4"
python-dotenv = "^1.0.0"
rich = "^13.5.3"
sqlglot = "^26.0.0"
rsa = "^4.7"
google-cloud-bigquery-storage = "^2.27.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"
pre-commit = ">=3.5,<5.0"
pytest = ">=7.4.2,<9.0.0"
ruff = ">=0.1,<0.9"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
lea = "lea.cli:app"

[tool.ruff]
lint.ignore = ["E501"]
line-length = 100
lint.select = ["E", "F", "I", "UP"] # https://beta.ruff.rs/docs/rules/
target-version = 'py310'

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
addopts = [
  "--doctest-modules",
  "--doctest-glob=README.md",
  "--ignore=examples",
  "--verbose",
  "--color=yes",
]
