[project]
name = "lea-cli"
version = "0.16.0"
description = "A minimalist alternative to dbt"
authors = [{name = "Max Halford", email = "maxhalford25@gmail.com"}]
requires-python = ">=3.11,<4"
dependencies = [
  "click>=8.1.7,<9",
  "Jinja2>=3.1.2,<4",
  "db-dtypes>=1.1.1,<2",
  "duckdb>=1.3.0,<2",
  "gitpython>=3.1.43,<4",
  "google-cloud-bigquery>=3.11.4,<4",
  "pandas>=2.1.3,<3",
  "python-dotenv>=1.0.0,<2",
  "rich>=13.5.3,<15",
  "sqlglot>=27.8,<29",
  "rsa>=4.7,<5",
  "google-cloud-bigquery-storage>=2.27.0,<3",
  "requests>=2.32.3,<3",
  "filelock>=3.20.1,<4",
  "pyyaml>=6,<7",
]

[project.scripts]
lea = "lea.cli:app"

[dependency-groups]
dev = [
  "ipykernel>=6.21.2,<8",
  "pre-commit>=4.1,<5",
  "pytest>=7.4.2,<10",
  "ruff>=0.1,<0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lea"]

[tool.ruff]
lint.ignore = ["E501"]
line-length = 100
lint.select = ["E", "F", "I", "UP"] # https://beta.ruff.rs/docs/rules/
target-version = 'py312'

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
addopts = [
  "--doctest-modules",
  "--doctest-glob=README.md",
  "--ignore=examples",
  "--verbose",
  "--color=yes",
]
markers = [
  "duckdb: quack quack"
]
